update Dockerfile
